added logo image

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 </head>
 <body>
 <div class="container">
+    <img src="Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left" alt="Bucket List image" style="width:120px;height:120px;">
     <div class="header">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li role="presentation" class="active"><a href="#">Home</a></li>
-                <li role="presentation" ><a href="#">Sign In</a></li>
-                <li role="presentation" ><a href="#">Sign Up</a></li>
+                <li role="presentation" class="active"><a href="index.html">Sign In</a></li>
+                <li role="presentation" ><a href="Sign_Up.html">Sign Up</a></li>
             </ul>
         </nav>
     </div><br>
 
     <div class="page-header">
-        <h1>My Bucket List</h1>
+        <h1>Bucket List App</h1>
     </div>
 
 
@@ -58,15 +58,10 @@
             </span>
         </div><br>
     </form>
+    <footer class="footer">
+        <p>&copy; Created by Tony Mputhia 2017</p>
+    </footer>
 </div>
-
-
-
-
-
-
-
-
 
 </body>
 </html>
