--- a/Sign_Up.html
+++ b/Sign_Up.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="BucketList.css">
-    <title></title>
+    <title>Sign Up</title>
 </head>
 <body>
 <div class="container">
+    <img src="Bucket-List-Drawing.jpg" id="BucketLogo" class="img-responsive pull-left" alt="Bucket List image" style="width:120px;height:120px;">
     <div class="header">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li role="presentation" ><a href="#">Home</a></li>
-                <li role="presentation" ><a href="#">Sign In</a></li>
+                <li role="presentation" ><a href="index.html">Sign In</a></li>
                 <li role="presentation" class="active"><a href="#">Sign Up</a></li>
             </ul>
         </nav>
@@ -41,7 +41,7 @@
             <label for="inputPassword" >Password</label>
             <input type="password" name="inputPassword" id="inputPassword" class="form-control" placeholder="Enter Password" >
             <label for="confirmPassword" >Confirm Password</label>
-            <input type="password" name="inputPassword" id="confirmPassword" class="form-control" placeholder="Confirm Password" >
+            <input type="password" name="inputPassword" id="confirmPassword" class="form-control" placeholder="Confirm Password" ><br>
             <button type="submit" class="btn btn-default">Submit</button>
         </fieldset>
     </form>
